home.jsp 본문 더보기 제외한 디자인 완료

--- a/semiproject/WebContent/css/style.css
+++ b/semiproject/WebContent/css/style.css
@@ -522,8 +522,11 @@ pre {
   position: relative;
   width: 100%;
   min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px; }
+  /* padding-right: 15px;
+  padding-left: 15px; */
+  padding: 30px 30px 30px 30px;
+  margin: 5px;
+  }
 
 .col {
   -ms-flex-preferred-size: 0;
@@ -912,7 +915,9 @@ pre {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 33.33333%;
     flex: 0 0 33.33333%;
-    max-width: 33.33333%; }
+    /* max-width: 33.33333%; */
+    max-width: 32.33333%;
+    }
   .col-md-5 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 41.66667%;
@@ -6191,7 +6196,8 @@ button.bg-dark:focus {
 
 .ml-4,
 .mx-4 {
-  margin-left: 1.5rem !important; }
+  margin-left: 1.5rem !important;
+}
 
 .m-5 {
   margin: 3rem !important; }
@@ -8018,7 +8024,9 @@ h1, h2, h3, h4, h5,
 
 .ftco-bread {
   background: #ccb78f !important;
-  padding: 4em 1.8em !important; }
+  /* padding: 4em 1.8em !important; */
+  padding: 1em 1.8em !important;
+  }
   .ftco-bread .breadcrumbs {
     text-transform: uppercase;
     font-size: 13px;
@@ -8201,8 +8209,12 @@ textarea.form-control {
 
 .ftco-animate {
   opacity: 0;
+  /* background-color: white; */
   visibility: hidden; }
 
+#top3-post {
+	background-color: white !important;
+}
 .about-author img {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -8767,3 +8779,12 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+    
+.image--cover {
+width: 200rem;
+height: 200rem;
+border-radius: 50%;
+
+object-fit: cover;
+object-position: center right;
+}
